--- a/src/examples/bench/index.html
+++ b/src/examples/bench/index.html
@@ -99,6 +99,7 @@
     <div>
       <button id="populateSmall">Write a little data</button>
       <button id="populateLarge">Write lots of data</button>
+      <button id="populateManyTransactions">Write data using many transactions</button>
       <button id="sumAll">Sum all values</button>
       <button id="randomReads">Read chunks of 1000 items</button>
       <button id="deleteFile">Delete file</button>
